// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetch get post archive 1`] = `
Array [
  Array [
    Object {
      "endpoint": "posts",
      "params": Object {
        "_embed": true,
        "page": 1,
        "search": undefined,
      },
    },
  ],
]
`;

exports[`fetch get post archive 2`] = `
Object {
  "/": Object {
    "isArchive": true,
    "isFetching": false,
    "isHome": true,
    "isPostArchive": true,
    "isPostTypeArchive": true,
    "isReady": true,
    "pages": Array [
      Array [
        Object {
          "id": 1801,
          "link": "https://test.frontity.io/2018/block-image/",
          "type": "post",
        },
        Object {
          "id": 1798,
          "link": "https://test.frontity.io/2018/block-button/",
          "type": "post",
        },
        Object {
          "id": 1797,
          "link": "https://test.frontity.io/2018/block-cover/",
          "type": "post",
        },
        Object {
          "id": 1796,
          "link": "https://test.frontity.io/2018/column-blocks/",
          "type": "post",
        },
        Object {
          "id": 1800,
          "link": "https://test.frontity.io/2018/block-gallery/",
          "type": "post",
        },
        Object {
          "id": 1799,
          "link": "https://test.frontity.io/2018/block-quotes/",
          "type": "post",
        },
        Object {
          "id": 1786,
          "link": "https://test.frontity.io/2018/block-category-common/",
          "type": "post",
        },
        Object {
          "id": 1789,
          "link": "https://test.frontity.io/2018/blocks-embeds/",
          "type": "post",
        },
        Object {
          "id": 1795,
          "link": "https://test.frontity.io/2018/blocks-widgets/",
          "type": "post",
        },
        Object {
          "id": 1788,
          "link": "https://test.frontity.io/2018/blocks-layout-elements/",
          "type": "post",
        },
      ],
    ],
    "total": 64,
    "totalPages": 7,
    "type": "post",
  },
  "/2018/block-button/": Object {
    "id": 1798,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/block-category-common/": Object {
    "id": 1786,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/block-cover/": Object {
    "id": 1797,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/block-gallery/": Object {
    "id": 1800,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/block-image/": Object {
    "id": 1801,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/block-quotes/": Object {
    "id": 1799,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/blocks-embeds/": Object {
    "id": 1789,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/blocks-layout-elements/": Object {
    "id": 1788,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/blocks-widgets/": Object {
    "id": 1795,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/column-blocks/": Object {
    "id": 1796,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/author/themereviewteam/": Object {
    "id": 6,
    "isArchive": true,
    "isAuthor": true,
    "isFetching": false,
    "isReady": true,
    "pages": Array [],
  },
  "/category/block/": Object {
    "id": 66,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/media-2/": Object {
    "id": 92,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/tag/columns/": Object {
    "id": 253,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/embeds-2/": Object {
    "id": 150,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/gallery/": Object {
    "id": 162,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/image/": Object {
    "id": 169,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/video/": Object {
    "id": 233,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
}
`;

exports[`fetch get two pages of post archive 1`] = `
Array [
  Array [
    Object {
      "endpoint": "posts",
      "params": Object {
        "_embed": true,
        "page": 1,
        "search": undefined,
      },
    },
  ],
  Array [
    Object {
      "endpoint": "posts",
      "params": Object {
        "_embed": true,
        "page": 2,
        "search": undefined,
      },
    },
  ],
]
`;

exports[`fetch get two pages of post archive 2`] = `
Object {
  "/": Object {
    "isArchive": true,
    "isFetching": false,
    "isHome": true,
    "isPostArchive": true,
    "isPostTypeArchive": true,
    "isReady": true,
    "pages": Array [
      Array [
        Object {
          "id": 1801,
          "link": "https://test.frontity.io/2018/block-image/",
          "type": "post",
        },
        Object {
          "id": 1798,
          "link": "https://test.frontity.io/2018/block-button/",
          "type": "post",
        },
        Object {
          "id": 1797,
          "link": "https://test.frontity.io/2018/block-cover/",
          "type": "post",
        },
        Object {
          "id": 1796,
          "link": "https://test.frontity.io/2018/column-blocks/",
          "type": "post",
        },
        Object {
          "id": 1800,
          "link": "https://test.frontity.io/2018/block-gallery/",
          "type": "post",
        },
        Object {
          "id": 1799,
          "link": "https://test.frontity.io/2018/block-quotes/",
          "type": "post",
        },
        Object {
          "id": 1786,
          "link": "https://test.frontity.io/2018/block-category-common/",
          "type": "post",
        },
        Object {
          "id": 1789,
          "link": "https://test.frontity.io/2018/blocks-embeds/",
          "type": "post",
        },
        Object {
          "id": 1795,
          "link": "https://test.frontity.io/2018/blocks-widgets/",
          "type": "post",
        },
        Object {
          "id": 1788,
          "link": "https://test.frontity.io/2018/blocks-layout-elements/",
          "type": "post",
        },
      ],
      Array [
        Object {
          "id": 1787,
          "link": "https://test.frontity.io/2018/blocks-formatting/",
          "type": "post",
        },
        Object {
          "id": 1724,
          "link": "https://test.frontity.io/2018/keyboard-navigation/",
          "type": "post",
        },
        Object {
          "id": 60,
          "link": "https://test.frontity.io/2016/the-beauties-of-gullfoss/",
          "type": "post",
        },
        Object {
          "id": 57,
          "link": "https://test.frontity.io/2016/shinjuku-gyoen-national-garden/",
          "type": "post",
        },
        Object {
          "id": 54,
          "link": "https://test.frontity.io/2016/lower-antelope-canyon/",
          "type": "post",
        },
        Object {
          "id": 51,
          "link": "https://test.frontity.io/2016/sunrise-at-phu-quoc-island/",
          "type": "post",
        },
        Object {
          "id": 46,
          "link": "https://test.frontity.io/2016/small-and-picturesque-french-villages/",
          "type": "post",
        },
        Object {
          "id": 42,
          "link": "https://test.frontity.io/2016/kebumen/",
          "type": "post",
        },
        Object {
          "id": 36,
          "link": "https://test.frontity.io/2016/banff-national-park/",
          "type": "post",
        },
        Object {
          "id": 33,
          "link": "https://test.frontity.io/2016/the-al-hajar-mountains/",
          "type": "post",
        },
      ],
    ],
    "total": 64,
    "totalPages": 7,
    "type": "post",
  },
  "/2016/banff-national-park/": Object {
    "id": 36,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2016/kebumen/": Object {
    "id": 42,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2016/lower-antelope-canyon/": Object {
    "id": 54,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2016/shinjuku-gyoen-national-garden/": Object {
    "id": 57,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2016/small-and-picturesque-french-villages/": Object {
    "id": 46,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2016/sunrise-at-phu-quoc-island/": Object {
    "id": 51,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2016/the-al-hajar-mountains/": Object {
    "id": 33,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2016/the-beauties-of-gullfoss/": Object {
    "id": 60,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/block-button/": Object {
    "id": 1798,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/block-category-common/": Object {
    "id": 1786,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/block-cover/": Object {
    "id": 1797,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/block-gallery/": Object {
    "id": 1800,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/block-image/": Object {
    "id": 1801,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/block-quotes/": Object {
    "id": 1799,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/blocks-embeds/": Object {
    "id": 1789,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/blocks-formatting/": Object {
    "id": 1787,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/blocks-layout-elements/": Object {
    "id": 1788,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/blocks-widgets/": Object {
    "id": 1795,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/column-blocks/": Object {
    "id": 1796,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/2018/keyboard-navigation/": Object {
    "id": 1724,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
  "/author/davidarenas/": Object {
    "id": 4,
    "isArchive": true,
    "isAuthor": true,
    "isFetching": false,
    "isReady": true,
    "pages": Array [],
  },
  "/author/luisherranz/": Object {
    "id": 1,
    "isArchive": true,
    "isAuthor": true,
    "isFetching": false,
    "isReady": true,
    "pages": Array [],
  },
  "/author/mario/": Object {
    "id": 2,
    "isArchive": true,
    "isAuthor": true,
    "isFetching": false,
    "isReady": true,
    "pages": Array [],
  },
  "/author/orballo/": Object {
    "id": 3,
    "isArchive": true,
    "isAuthor": true,
    "isFetching": false,
    "isReady": true,
    "pages": Array [],
  },
  "/author/themereviewteam/": Object {
    "id": 6,
    "isArchive": true,
    "isAuthor": true,
    "isFetching": false,
    "isReady": true,
    "pages": Array [],
  },
  "/category/block/": Object {
    "id": 66,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/cities/": Object {
    "id": 4,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/culture/": Object {
    "id": 6,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/inspiring-stories/": Object {
    "id": 57,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/lifestyle/": Object {
    "id": 59,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/media-2/": Object {
    "id": 92,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/nature/": Object {
    "id": 7,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/news/": Object {
    "id": 56,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/photography/": Object {
    "id": 3,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/travel/": Object {
    "id": 8,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/voices-and-views/": Object {
    "id": 58,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/category/weekend-trip/": Object {
    "id": 1,
    "isArchive": true,
    "isCategory": true,
    "isFetching": false,
    "isReady": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "category",
  },
  "/tag/al-hajar-mountains/": Object {
    "id": 34,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/antelope-canyon/": Object {
    "id": 18,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/arizona/": Object {
    "id": 19,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/canada/": Object {
    "id": 32,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/columns/": Object {
    "id": 253,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/culture/": Object {
    "id": 30,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/embeds-2/": Object {
    "id": 150,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/formatting-2/": Object {
    "id": 159,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/france/": Object {
    "id": 25,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/french-riviera/": Object {
    "id": 27,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/gallery/": Object {
    "id": 162,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/gullfoss/": Object {
    "id": 10,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/iceland/": Object {
    "id": 9,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/image/": Object {
    "id": 169,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/indonesia/": Object {
    "id": 29,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/island/": Object {
    "id": 23,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/japan/": Object {
    "id": 15,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/java/": Object {
    "id": 28,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/national-garden/": Object {
    "id": 16,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/national-park/": Object {
    "id": 31,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/nature/": Object {
    "id": 13,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/oman/": Object {
    "id": 35,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/phu-quoc/": Object {
    "id": 22,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/rocky-mountains/": Object {
    "id": 33,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/tokyo/": Object {
    "id": 14,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/united-arab-emirates/": Object {
    "id": 36,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/video/": Object {
    "id": 233,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/vietnam/": Object {
    "id": 24,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/villages/": Object {
    "id": 26,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
  "/tag/waterfall/": Object {
    "id": 11,
    "isArchive": true,
    "isFetching": false,
    "isReady": true,
    "isTag": true,
    "isTaxonomy": true,
    "pages": Array [],
    "taxonomy": "tag",
  },
}
`;
